--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>FUNNY MATCHING GAMES [SUMAN+RITA]</title>
+  <title>FUNNY MATCHING GAMES </title>
   <link rel="stylesheet" href="style.css"></link>
   
 </head>
 <body id="particles-js">
   <div>
-  <h2>FUNNY MATCHING GAMES [SUMAN+RITA]</h2>
+  <h2> MATCHING GAMES</h2>
 
   <h3>Score:<span id="result"></span></h3>
 <div class="center">
@@ -18,7 +18,7 @@
 <script src="app1.js" charset="utf-8"></script>
 <script src="app.js" charset="utf-8"></script>
 </div>
-<h3>CREATED FOR RITA ❤️</h3>
+<h3>CREATED BY PROGRAMMERSUMANHALDER(❤️)</h3>
 </div>
 
 </body>
